--- a/Frontend/healthviz/package.json
+++ b/Frontend/healthviz/package.json
@@ -16,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "css:build": "node-sass-chokidar --include-path ./node_modules/foundation-sites/scss --include-path ./src/assets/styles --include-path ./node_modules src/ -o assets/styles"
   },
   "eslintConfig": {
     "extends": "react-app"
