--- a/Frontend/healthviz/package.json
+++ b/Frontend/healthviz/package.json
@@ -9,6 +9,7 @@
     "node-sass": "^4.9.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-qr-reader": "^2.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5"
   },
